--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- Open Graph Meta Tags (For Social Media Sharing) -->
   <meta property="og:title" content="Md. Ashraful Islam | MERN Stack Developer">
   <meta property="og:description" content="Experienced MERN Stack Developer skilled in React.js, Next.js, and modern web development. Explore my projects.">
-  <meta property="og:image" content="https://i.ibb.co/5XCZzwcw/image.png">
+  <meta property="og:image" content="https://i.ibb.co.com/5XCZzwcw/image.png">
   <meta property="og:url" content="https://ashrafulislam.vercel.app/">
   <meta property="og:type" content="website">
 
@@ -43,7 +43,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Md. Ashraful Islam | MERN Stack Developer">
   <meta name="twitter:description" content="Explore my portfolio showcasing modern web development projects with React.js and Next.js.">
-  <meta name="twitter:image" content="https://i.ibb.co/5XCZzwcw/image.png">
+  <meta name="twitter:image" content="https://i.ibb.co.com/5XCZzwcw/image.png">
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/code.png" />
