--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/code.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Md. Ashraful Islam">
+  <meta name="description" content="Md. Ashraful Islam - MERN Stack Developer specializing in React.js, Next.js, and modern web technologies. Check out my projects and get in touch!">
+  <meta name="keywords" content="Md. Ashraful Islam, MERN Stack Developer, React.js, Next.js, JavaScript, Web Development, Frontend Developer, Portfolio">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
   <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
